--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -7,7 +7,8 @@
     "outDir": "./dist",
     "esModuleInterop": true,
     "removeComments": true,
-    "strict": true
+    "strict": true,
+    "skipLibCheck": true
   },
   "include": ["src/**/*", "src/types/express-overrides.d.ts"],
   "exclude": ["node_modules"]
