--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "build": "tsc",
-    "postbuild": "cp -r src/1-assets/images dist/1-assets/images",
+    "postbuild": "mkdir -p dist/1-assets && cp -r src/1-assets/images dist/1-assets/images",
     "start": "node dist/app.js"
   },
   "keywords": [],
